# Quartz

./: .gitignore  .gitmodules  CMakeLists.txt
data/models/legozzi/: legozzi.mtl
data/shaders/: compile.bat  shader.frag  shader.vert
src/: main.cpp
src/qz/gfx/: assets.cpp  assets.hpp  buffer.cpp  buffer.hpp  clear.hpp  command_buffer.cpp  command_buffer.hpp  context.cpp  context.hpp  descriptor_set.cpp  descriptor_set.hpp  image.cpp  pipeline.cpp  pipeline.hpp  queue.cpp  queue.hpp  render_pass.cpp  render_pass.hpp  renderer.cpp  renderer.hpp  static_buffer.cpp  static_buffer.hpp  static_mesh.cpp  static_mesh.hpp  static_model.cpp  static_model.hpp  static_texture.cpp  static_texture.hpp  swapchain.cpp  swapchain.hpp  task_manager.cpp  task_manager.hpp  window.cpp  window.hpp
src/qz/meta/: constants.hpp  types.hpp
src/qz/util/: file_view.cpp  file_view.hpp  fwd.hpp  hash.hpp  macros.hpp
